--- a/M5/Ejercicio 1/contactStyle.css
+++ b/M5/Ejercicio 1/contactStyle.css
@@ -1,8 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&family=Roboto:wght@400;700&display=swap');
+
+/*
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Slab', serif;
+*/
+
+body{
+    margin-left: 45px;
+}
+
+header{
+    text-align: center;
+    background-color: white;
+}
+
+nav{
+    color: #04146c;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 18pt;
+    align-items: center;
+    display: flex;
+}
+
+nav a{
+    text-decoration: none;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    padding-left: 0px;
+}
+
+ul li{
+    padding: 5px;
+}
+
+#logo-nav{
+    width: 5%;
+}
+
+.activo{
+    font-weight: 700;
+}
+
+img{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
 input{
     margin: 0;
     padding: 0;
+    height: 50px;
+    width: 500px;
+    font-size: x-large;
+}
+
+textarea{
+    width: 500px;
+    height: 100px;
+    font-size: xx-large;
+}
+
+.question{
+    color: #2c00cc;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700;
+    font-size: 34pt;
+}
+
+form p{
+    color: #04146c;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 23pt;
+    font-weight: 400;
 }
 
 label p{
-    margin: 0;
+    font-weight: 700;
+    display: inline-block;
+    padding-bottom: 20px;
+}
+
+.required{
+    color: red;
+}
+
+
+button{
+    color: white;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700;
+    font-size: 24pt;
+}
+
+button:nth-child(1){
+    background-color: #f98500;
+}
+
+button:nth-child(2){
+    background-color: #2c00cc;
+    margin-left: 155px;
 }
