--- a/M5/Ejercicio 1-2-3/contactStyle.css
+++ b/M5/Ejercicio 1-2-3/contactStyle.css
@@ -6,6 +6,9 @@ font-family: 'Roboto Slab', serif;
 */
 
 body{
+    margin: 0;
+}
+div{
     margin-left: 45px;
 }
 
@@ -105,4 +108,19 @@ button:nth-child(1){
 button:nth-child(2){
     background-color: #2c00cc;
     margin-left: 155px;
+}
+
+footer{
+    height: 60px;
+    width: 100%;
+    background-color: #3957f1;
+    margin: 0px;
+    position: fixed;
+    bottom: 0;
+}
+
+.logo-footer{
+    width: 8%;
+    padding-left: 5%;
+    display: flex;
 }
